# lox-server

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  fourmolu.yaml  lox-server.cabal  obloxious.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/Development/Lox/: Server.hs
src/Development/Lox/Server/: Parser.hs  Pretty.hs  Span.hs  Types.hs
src/Development/Lox/Server/Parser/: Internal.hs
test/Development/Server/: ParserSpec.hs
test/Development/Server/Parser/: InternalSpec.hs
test/data/: declarations.lox  expressions.lox  full-program.lox  multiple-errors.lox  parse-error.lox  statements.lox
