cabal-version: 3.4
name: lox-server
version: 0.1.0.0
synopsis: A language server implementation for the toy language lox
homepage: https://github.com/sgillespie/lox-server
license: BSD-3-Clause
license-file: LICENSE
author: Sean D Gillespie
maintainer: sean@mistersg.net
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md
data-files:
  test/data/*.lox

common warnings
  ghc-options: -Wall
  build-depends:
    base ^>=4.18.2.1,
    extra,
    relude,

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  default-extensions:
    DataKinds,
    DuplicateRecordFields,
    OverloadedStrings,
    DerivingStrategies

library
  import: warnings
  exposed-modules:
    Development.Lox.Server
    Development.Lox.Server.Parser
    Development.Lox.Server.Parser.Internal
    Development.Lox.Server.Pretty
    Development.Lox.Server.Span
    Development.Lox.Server.Types

  build-depends:
    filepath,
    lsp,
    lsp-types,
    microlens,
    megaparsec,
    parser-combinators,
    prettyprinter

  hs-source-dirs: src
  default-language: GHC2021

executable lox-server
  import: warnings
  main-is: Main.hs
  build-depends:
    lox-server

  hs-source-dirs: app
  default-language: GHC2021

test-suite lox-server-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Development.Server.Parser.InternalSpec
    Development.Server.ParserSpec
    Paths_lox_server
  hs-source-dirs: test
  default-language: GHC2021
  build-tool-depends:
    sydtest-discover:sydtest-discover
  build-depends:
    lox-server,
    hspec-megaparsec,
    hspec,
    megaparsec,
    sydtest,
    sydtest-hspec
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
