cabal-version: 3.4
name: obloxious
version: 0.1.0.0
synopsis: A language server implementation for the toy language lox
homepage: https://github.com/sgillespie/obloxious
license: BSD-3-Clause
license-file: LICENSE
author: Sean D Gillespie
maintainer: sean@mistersg.net
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall
  build-depends:
    base ^>=4.18.2.1,
    relude,

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),

  default-extensions:
    OverloadedStrings

library
  import: warnings
  exposed-modules:
    Development.Lox.Server

  build-depends:
    lsp,
    lsp-types,

  hs-source-dirs: src
  default-language: GHC2021

executable obloxious
  import: warnings
  main-is: Main.hs
  build-depends:
    obloxious

  hs-source-dirs: app
  default-language: GHC2021

test-suite obloxious-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    obloxious
